Documentacion: anadido desarrollo-problema-facerecognition

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Daniel Lanza García at 2015-03-18 21:59:34 +0100 
+%% Created for Daniel Lanza García at 2015-03-21 22:22:14 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{opencv,
+	Date-Added = {2015-03-21 21:20:33 +0000},
+	Date-Modified = {2015-03-21 21:22:02 +0000},
+	Read = {0},
+	Title = {{P\'agina de la libreria de procesamiento de im\'agenes OpenCV}},
+	Url = {http://opencv.org/}}
+
+@article{paper-facerecognition,
+	Author = {Cesar Benavides-Alvarez y Juan Villegas-Cortez y Graciela Rom{\'a}n-Alonso y Carlos Avil{\'e}s-Cruz},
+	Date-Added = {2015-03-21 20:35:23 +0000},
+	Date-Modified = {2015-03-21 20:36:59 +0000},
+	Journal = {Universidad Autonoma Metropolitana, Mexico},
+	Title = {Reconocimiento de rostros a partir de la propia imagen usando t{\'e}cnica CBIR},
+	Year = {2015}}
 
 @article{paper-gfs,
 	Author = {Sanjay Ghemawat and Howard Gobioff and Shun-Tak Leung},
