--- a/doc/desarrollo-implementacion.tex
+++ b/doc/desarrollo-implementacion.tex
@@ -1,4 +1,5 @@
 La herramienta de computo evolutivo ECJ es conocida entre otras cosas por su flexibilidad a la hora de poder desarrollar problemas en este ámbito, es por esto que la implementación que se plantea sigue la misma idea con el objetivo de que gran parte de los problemas que pueden ser implementados con esta herramienta, puedan hacer uso de la característica que se desarrolla en este trabajo de una forma sencilla.
+\label{desarrollo-implementacion}
 
 El propósito del trabajo y es distribuir el costo computacional de la fase de evaluación de un algoritmo de computación evolutiva, es por esto que lo que debemos desarrollar es un Evaluator \ver{ecj-classes} el cual lleve a cabo la evaluación de los individuos.
 
