--- a/doc/desarrollo-problema-maxone.tex
+++ b/doc/desarrollo-problema-maxone.tex
@@ -1,3 +1,4 @@
+\label{desarrollo-maxone}
 Para probar la implementación realizada, se ha configurado un problema sencillo que hace uso de la evaluación en un cluster Hadoop. El problema configurado se conoce con el nombre MaxOne y tiene como objetivo la construcción de una cadena de 1s, cada individuo esta representado por un conjunto de 1s y 0s teniendo todos los individuos una cadena de la misma longitud. La función de fitness es tan sencilla como contar el n\'umero de 1s en la cadena, el individuo ideal ser\'a aquel que su cadena contenga solo 1s.
 
 Si quisiéramos ejecutar este problema con ECJ, sin hacer uso de la integración con Hadoop, debemos definir dos cosas. En primer lugar una clase que representa el problema, la cual en este caso tan solo implementa la función de evaluación, y en segundo lugar el fichero de configuración de ECJ.
