--- a/doc/main.tex
+++ b/doc/main.tex
@@ -53,14 +53,16 @@
 
 \chapter{Desarrollo del proyecto}
 	\input{desarrollo-introduccion.tex}
-	\section{Estudio de ECJ, herramienta de c\'omputo evolutivo\label{desarrollo-ecj}}
+	\section{Estudio de ECJ como herramienta de c\'omputo evolutivo\label{desarrollo-ecj}}
 		\input{desarrollo-ecj.tex}
-	\section{Estudio de Hadoop, herramienta de procesamiento masivo de informaci\'on\label{desarrollo-hadoop}}
+	\section{Estudio de Hadoop como herramienta de procesamiento masivo de informaci\'on\label{desarrollo-hadoop}}
 		\input{desarrollo-hadoop.tex}
 	\section{Implementaci\'on}
 		\input{desarrollo-implementacion.tex}
-	\section{Despliegue de un problema sencillo, MaxOne}
+	\section{Despliegue de un problema sencillo: MaxOne}
 		\input{desarrollo-problema-maxone.tex}
+	\section{Algo m\'as complejo: reconocimiento facial}
+		\input{desarrollo-problema-facerecognition.tex}
 
 \chapter{Manual de usuario}
 	\section{Obtenci\'on}
